# server/routes/task.go
@@ -14,185 +14,289 @@ import (
 	"github.com/labstack/gommon/log"
 )
 
+// swagger:parameters task retrieve-all
+type GetTasksRequest struct {
+	// UUID of parent column
+	//
+	// in: path
+	// required: true
+	Column_GID string
+}
+
+// swagger:response multi-task-response
+type GetTasksResponse struct {
+	// in: body
+	Data []types.Task
+}
+
+// swagger:parameters task retrieve-one
+type GetTaskRequest struct {
+	// UUID of parent column
+	//
+	// in: path
+	// required: true
+	Column_GID string
+
+	// UUID of task
+	//
+	// in: path
+	// required: true
+	Task_GID string
+}
+
+// swagger:response single-task-response
+type GetTaskResponse struct {
+	// in: body
+	Data types.Task
+}
+
+// swagger:parameters task update
+type UpdateTaskRequest struct {
+	// UUID of parent column
+	//
+	// in: path
+	// required: true
+	Column_GID string
+
+	// UUID of task
+	//
+	// in: path
+	// required: true
+	Task_GID string
+
+	// Title of task
+	//
+	// in: body
+	Title string `form:"title"`
+
+	// Description of task
+	//
+	// in: body
+	Description string `form:"description"`
+}
+
+// swagger:parameters task delete
+type DeleteTaskRequest struct {
+	// UUID of parent column
+	//
+	// in: path
+	// required: true
+	Column_GID string
+
+	// UUID of task
+	//
+	// in: path
+	// required: true
+	Task_GID string
+}
+
+// swagger:route GET /api/task/{Column_GID} task retrieve-all
+//
+// Retrieves all tasks by parent column UUID
+//
+// Responses:
+//   200: multi-task-response
+//   400: error-response
 func GetTasks(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Data.Code = "get_tasks_failed"
+	e.Data.Message = "Failed to retrieve tasks"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	columnGid := c.Param("column_gid")
+	params := new(GetTasksRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
 
-	hasPermission, err := auth.VerifyColumnPermission(memberId, columnGid, auth.VIEW_PERM)
+	hasPermission, err := auth.VerifyColumnPermission(memberId, params.Column_GID, auth.VIEW_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_tasks_failed",
-			"message": "Failed to retrieve tasks",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to retrieve tasks",
-		})
+		e.Data.Code = "invalid_permission"
+		e.Data.Message = "Invalid permissions to retrieve tasks"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	tasks, err := retrieveAllTasks(columnGid)
+	tasks, err := retrieveAllTasks(params.Column_GID)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_tasks_failed",
-			"message": "Failed to retrieve tasks",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, tasks)
 }
 
+// swagger:route GET /api/task/{Column_GID}/{Task_GID} task retrieve-one
+//
+// Retrieves task by parent column and task UUIDs
+//
+// Responses:
+//   200: single-task-response
+//   400: error-response
 func GetTaskById(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Data.Code = "get_task_failed"
+	e.Data.Message = "Failed to retrieve task"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	columnGid := c.Param("column_gid")
-	taskGid := c.Param("task_gid")
+	params := new(GetTaskRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
 
-	hasPermission, err := auth.VerifyColumnPermission(memberId, columnGid, auth.VIEW_PERM)
+	hasPermission, err := auth.VerifyColumnPermission(memberId, params.Column_GID, auth.VIEW_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_task_failed",
-			"message": "Failed to retrieve task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to retrieve task",
-		})
+		e.Data.Code = "invalid_permission"
+		e.Data.Message = "Invalid permissions to retrieve task"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	task, err := retrieveTaskByGid(columnGid, taskGid)
+	task, err := retrieveTaskByGid(params.Column_GID, params.Task_GID)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_task_failed",
-			"message": "Failed to retrieve task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, task)
 }
 
+// swagger:route PUT /api/task/{Column_GID}/{Task_GID} task update
+//
+// Updates task by parent column and task UUIDs
+//
+// Responses:
+//   200: single-task-response
+//   400: error-response
 func EditTask(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Data.Code = "update_task_failed"
+	e.Data.Message = "Failed to update task"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	title := strings.TrimSpace(c.FormValue("title"))
-	description := strings.TrimSpace(c.FormValue("description"))
+	params := new(UpdateTaskRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
+	cleanTaskData(params)
 
-	columnGid := c.Param("column_gid")
-	taskGid := c.Param("task_gid")
-
-	hasPermission, err := auth.VerifyColumnPermission(memberId, columnGid, auth.EDIT_PERM)
+	hasPermission, err := auth.VerifyColumnPermission(memberId, params.Column_GID, auth.EDIT_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_task_failed",
-			"message": "Failed to update task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to update task",
-		})
+		e.Data.Code = "invalid_permission"
+		e.Data.Message = "Invalid permissions to update task"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	task, err := updateTask(columnGid, taskGid, title, description)
+	task, err := updateTask(params)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_task_failed",
-			"message": "Failed to update task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, task)
 }
 
+// swagger:route POST /api/task/{Column_GID} task create
+//
+// Creates a task in the column specified by UUID
+//
+// Responses:
+//   200: single-task-response
+//   400: error-response
 func CreateTask(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Data.Code = "add_task_failed"
+	e.Data.Message = "Failed to create new task"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	title := strings.TrimSpace(c.FormValue("title"))
-	description := strings.TrimSpace(c.FormValue("description"))
+	params := new(UpdateTaskRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
+	cleanTaskData(params)
 
-	columnGid := c.Param("column_gid")
-
-	hasPermission, err := auth.VerifyColumnPermission(memberId, columnGid, auth.EDIT_PERM)
+	hasPermission, err := auth.VerifyColumnPermission(memberId, params.Column_GID, auth.EDIT_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_task_failed",
-			"message": "Failed to update task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to create task",
-		})
+		e.Data.Code = "invalid_permission"
+		e.Data.Message = "Invalid permissions to create task"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	task, err := addTask(columnGid, title, description)
+	task, err := addTask(params)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "add_task_failed",
-			"message": "Failed to create new task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusCreated, task)
 }
 
+// swagger:route DELETE /api/task/{Column_GID}/{Task_GID} task delete
+//
+// Deletes task by parent column and task UUIDs
+//
+// Responses:
+//   200:
+//   400: error-response
 func DeleteTask(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Data.Code = "delete_task_failed"
+	e.Data.Message = "Failed to delete task"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	taskGid := c.Param("task_gid")
-	columnGid := c.Param("column_gid")
+	params := new(DeleteTaskRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
 
-	hasPermission, err := auth.VerifyColumnPermission(memberId, columnGid, auth.EDIT_PERM)
+	hasPermission, err := auth.VerifyColumnPermission(memberId, params.Column_GID, auth.EDIT_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "delete_task_failed",
-			"message": "Failed to delete task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to delete task",
-		})
+		e.Data.Code = "invalid_permission"
+		e.Data.Message = "Invalid permissions to delete task"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	err = removeTask(taskGid)
+	err = removeTask(params.Task_GID)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "delete_task_failed",
-			"message": "Failed to delete task",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusAccepted, nil)
@@ -272,7 +376,7 @@ func retrieveTaskByGid(columnGid string, taskGid string) (types.Task, error) {
 	return task, nil
 }
 
-func updateTask(columnGid string, taskGid string, title string, description string) (types.Task, error) {
+func updateTask(params *UpdateTaskRequest) (types.Task, error) {
 	var task types.Task
 
 	conn, err := pgx.Connect(context.Background(), os.Getenv("PG_URL"))
@@ -297,7 +401,7 @@ func updateTask(columnGid string, taskGid string, title string, description stri
 				updated = CURRENT_TIMESTAMP
 			WHERE gid = $3;
 		`,
-		title, description, taskGid, columnGid,
+		params.Title, params.Description, params.Task_GID, params.Column_GID,
 	)
 	if err != nil {
 		return task, err
@@ -314,7 +418,7 @@ func updateTask(columnGid string, taskGid string, title string, description stri
 			FROM task
 			WHERE gid = $1;
 		`,
-		taskGid,
+		params.Task_GID,
 	).Scan(&task.Id, &task.Gid, &task.Title, &task.Description, &task.TaskColumnId)
 	if err != nil {
 		return task, err
@@ -328,7 +432,7 @@ func updateTask(columnGid string, taskGid string, title string, description stri
 	return task, nil
 }
 
-func addTask(columnGid string, title string, description string) (types.Task, error) {
+func addTask(params *UpdateTaskRequest) (types.Task, error) {
 	var task types.Task
 
 	conn, err := pgx.Connect(context.Background(), os.Getenv("PG_URL"))
@@ -350,7 +454,7 @@ func addTask(columnGid string, title string, description string) (types.Task, er
 			SELECT $2, $3, id FROM task_column WHERE task_column.gid = $1
 			RETURNING task.id;
 		`,
-		columnGid, title, description,
+		params.Column_GID, params.Title, params.Description,
 	).Scan(&taskId)
 	if err != nil {
 		return task, err
@@ -411,4 +515,10 @@ func removeTask(taskGid string) error {
 	}
 
 	return nil
+}
+
+// Removes whitespace from title, description
+func cleanTaskData(params *UpdateTaskRequest) {
+	params.Title = strings.TrimSpace(params.Title)
+	params.Description = strings.TrimSpace(params.Description)
 }
